Fixed alignment issue with footer
This was caused by the media rules not changing with the main footer
declarations.

--- a/src/template.css
+++ b/src/template.css
@@ -163,7 +163,7 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
-  footer {
+  #back-matter {
     grid-template-columns: 1fr;
   }
   #license,
